# Analisis_Imagenes

./: .gitignore  CLAUDE.md  CMakeLists.txt  LECCIONES_APRENDIDAS.md  LICENSE  README.md  build_cmake.bat  build_cpp.bat  build_direct.bat  build_opencv.bat  config.yaml  main.py  requirements.txt  setup.py  setup_simple.py  webapp_requirements.txt
cpp/bindings/: python_bindings.cpp
cpp/include/: image_loader.hpp  normalizer.hpp  preprocessor.hpp  roi_extractor.hpp
cpp/src/: image_loader.cpp  normalizer.cpp  preprocessor.cpp  roi_extractor.cpp
cpp_opencv/: preprocessor_opencv.cpp
cpp_simple/: CMakeLists.txt  preprocessor_simple.cpp
data/annotations/: Resultado.txt  ground_truth.json
src/: __init__.py
src/inference/: __init__.py  onnx_inference.py  pipeline.py  postprocessor.py
src/models/: __init__.py  export_onnx.py
src/visualization/: __init__.py  overlay.py
tests/: __init__.py  conftest.py
tests/test_api/: test_auth_routes.py  test_session_routes.py
tests/test_auth/: test_security.py
tests/test_database/: test_models.py
tests/test_integration/: test_pipeline_integration.py
training/: README.md  export_onnx.py  prepare_dataset.py  setup_training_env.bat  train_model.py
webapp/: __init__.py  config.py  main.py
webapp/api/: admin.py  analyses.py  dashboard.py  sessions.py
webapp/auth/: __init__.py  dependencies.py  routes.py  security.py
webapp/database/: __init__.py  connection.py  models.py
webapp/schemas/: __init__.py  analysis.py  session.py  user.py
webapp/services/: __init__.py  analysis_service.py
webapp/static/css/: styles.css
webapp/templates/: base.html
webapp/templates/admin/: database.html  tests.html
webapp/templates/analysis/: history.html  result.html  upload.html
webapp/templates/auth/: login.html  register.html
webapp/templates/dashboard/: index.html
